2004-01-28  Sanjay Gupta <gsanjay@novell.com>

	* gdipFunctions.cs: Added FontFamily and FontCollection functions.
	* FontFamily.cs: Implemented missing functionalities.

2004-01-24  Duncan Mak  <duncan@ximian.com>

	* Graphics.cs (DrawPath): Implemented.

2004-01-23  Ravindra  <rkumar@novell.com>

	* Point.cs: ToString modified.
	* PointF.cs: ToString modified.
	* Size.cs: ToString modified.
	* SizeF.cs: ToString modified. ToPoint and ToSize methods
	are added.

2004-01-21  Jordi Mas i Hernàndez
	* Bitmap.cs: Several new methods added.
		
2004-01-21  Duncan Mak  <duncan@ximian.com>

	* gdipFunctions.cs (GdipGetPathTypes, GdipGetPathPoints): Add
	OutAttribute to the array argument. This fixes the PathPoints
	property in System.Drawing.Drawing2D.GraphicsPath.

2004-01-20  Ravindra  <rkumar@novell.com>

	* Pen.cs: Fixed bug #52811 in Pen.Transform property. Setting
	this property was hanging and getting was throwing a NullRef
	Exception. Earlier we were passing Matrix object to and fro
	which was causing the problem. Now, we are using IntPtr.
	Thanks to Duncan for helping me.
	Also, .NET behavior is to maintain Pen.Color and Pen.Brush
	together. If color is set, a SolidBrush automatically gets
	set with the same color, Pen loses the old brush object.
	If a SolidBrush is set, Pen.Color gets the value same as that
	of brush color losing the old value. Pen shows this behavior
	now.
	* gdipFunctions.cs: Changed the signature of GdipGetPenTransform
	and GdipSetPenTransform methods to use IntPtr instead of Matrix.

2004-01-19  Duncan Mak  <duncan@ximian.com>

	* gdipFunctions.cs: Import functions for GraphicsPath.

2004-01-14  Ravindra <rkumar@novell.com>
                                                                                
        * SolidBrush.cs: Made SolidBrush to initialize its color
	from IntPtr.
                                                                                
        * gdipFunctions.cs: Added call to GdipGetSolidFillColor GDI+ API.
